Adding attribution for the new icon in manifest
Signed-off-by: Panav Munshi <panav.munshi@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.leboys.currencyconverter">
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- "Icon made by Freepik from www.flaticon.com" -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
